<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelplinesActivity.AccidentHelplines"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/accident">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAccidentHelpline1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="#a8e063"
        app:cardCornerRadius="40dp"
        app:elevation="5dp"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fire_helpline_101"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAccidentHelpline2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="#a8e063"
        app:cardCornerRadius="40dp"
        app:elevation="5dp"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/road_accident_helpline_1073"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAccidentHelpline3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="#a8e063"
        app:cardCornerRadius="40dp"
        app:elevation="5dp"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/railway_accident_helpline_1072"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAccidentHelpline4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="#a8e063"
        app:cardCornerRadius="40dp"
        app:elevation="5dp"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earthquake_flood_disaster_9711077372"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvAccidentHelpline5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardBackgroundColor="#a8e063"
        app:cardCornerRadius="40dp"
        app:elevation="5dp"
        android:padding="10dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disaster_management_helpline_108"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>